workloads/valops-dashboard/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: valops-dashboard
  labels:
    app.kubernetes.io/part-of: workloads
